feat(release): update 40ba4e91
